# FolderToAI

./: Cargo.toml  LICENSE  README.md  build.rs
src/: clipboard_utils.rs  core_utils.rs  file_info.rs  file_utils.rs  folder_info.rs  input_utils.rs  main.rs  settings.rs  setup_utils.rs  win_utils.rs
