[package]
name = "FolderToAI"
version = "0.1.0"
build = "build.rs"
edition = "2024"

[build-dependencies]
embed-resource = "^3.0"

[dependencies]
egui = "0.31.1"
eframe = "0.31.1"
image = "0.25.6"
winapi = { version = "0.3.9", features = ["winuser", "winerror"] }
winreg = "0.55.0"
unicode-segmentation = "1.12.0"
device_query = "0.2.8"
clipboard = "0.5"
lazy_static = "1.5.0"
size = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"